# turing

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_storage.py
src/: app.py  test_numpy_conversion.py
src/face_recognition/: CLAUDE.md  _yolo_service.py  router.py  schemas.py  service.py  yolo_service.py  yolo_service_v2.py
src/interfaces/completion/: app.js  index.html
src/interfaces/face-recognition/: README.md  app.js  index.html
src/interfaces/monitoring/: app.js  index.html
src/interfaces/onboarding/: camera-oauth.html  index.html  signup.html  two-factor.html
src/interfaces/permissions/: app.js  index.html
src/interfaces/segmentation/: app.js  index.html
src/monitoring/: detection_service.py  gemini_service.py  notification_service.py  router.py  run_client.py  schemas.py
src/segmentation/: CLAUDE.md  README.md  client.py  enums.py  external_service.py  router.py  schemas.py  segment_manager.py  service.py
src/storage/: README.md  __init__.py  persistent_storage.py
