[project]
name = "ai-security-worker"
version = "0.1.0"
description = "AI Security Worker for processing security camera footage with face recognition and object detection"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "celery",
    "redis",
    "setuptools",
    "cmake",
    "dlib==19.24.0",
    "face-recognition",
    "face-recognition-models",
    "numpy==1.26.4",
    "opencv-python-headless",
    "ultralytics",
    "shapely",
    "requests",
    "python-dotenv",
    "python-multipart",
    "pydantic",
    "jinja2",
    "aiofiles",
    "replicate>=1.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
